--- a/templates/index.html
+++ b/templates/index.html
@@ -547,14 +547,14 @@
             <p class="detail-key">Race & Ethnicity:</p>
             <p class="detail-value">{{data['ethnicity']}}</p>
           </div>
-          <div class="row-detail">
+          <!-- <div class="row-detail">
             <p class="detail-key">Phone:</p>
             <p class="detail-value">{{data['phone']}}</p>
           </div>
           <div class="row-detail">
             <p class="detail-key">Email:</p>
             <p class="detail-value">{{data['email']}}</p>
-          </div>
+          </div> -->
           <div class="linkedin-container">
             <a class="linkedin-link" href="{{data['linkedIn']}}">
               View Linkedin Profile
@@ -572,7 +572,7 @@
         </div>
         <div class="infographs-section">
           <div class="skill-meter">
-            <p class="graph-title">CREADREADY READINESS</p>
+            <p class="graph-title">CREDREADINESS</p>
             <div id="gaugeMeter"></div>
             <div class="readinessValue">{{credredinessValue}}</div>
             <div class="indicators-container">
@@ -630,7 +630,7 @@
           </div>
           <div class="pathway-content">
             <div class="pathway-detail">
-              <p class="pathway-key">BS, Bio/Chem</p>
+              <p class="pathway-key">MD</p>
               {% if data['bio'] %}
               <svg
                 width="24"
@@ -689,7 +689,7 @@
               {% endif %}
             </div>
             <div class="pathway-detail">
-              <p class="pathway-key">R&D Management</p>
+              <p class="pathway-key">Post Doc</p>
               {% if data['rAndD'] %}
               <svg
                 width="24"
@@ -747,7 +747,7 @@
               {% endif %}
             </div>
             <div class="pathway-detail">
-              <p class="pathway-key">M&A</p>
+              <p class="pathway-key">Principle</p>
               {% if data['mAndA'] %}
               <svg
                 width="24"
@@ -776,7 +776,7 @@
               {% endif %}
             </div>
             <div class="pathway-detail">
-              <p class="pathway-key">Venture Capital</p>
+              <p class="pathway-key">Board Observer</p>
               {% if data['ventureCapital'] %}
               <svg
                 width="24"
