--- a/templates/index.html
+++ b/templates/index.html
@@ -46,7 +46,7 @@
               display: flex;
               flex-direction: column;
               background-color: #3893d0;
-              flex: 0.5;
+              height: 370px;
               width: 100%;
               align-items: center;
             }
@@ -468,18 +468,18 @@
            }],
             data: [{
                 id: 'A',
-                name: 'Apples',
+                name: 'Mani-Dade',
                 colorValue: 1
             }, {
                 id: 'B',
-                name: 'Bananas',
+                name: 'Broward',
                 colorValue: 5
             }, {
                 id: 'O',
-                name: 'Oranges',
+                name: 'Palm Beach',
                 colorValue: 7
             }, {
-                name: 'Anne',
+                name: 'Orange',
                 parent: 'A',
                 value: 5,
                 colorValue: 6
